# CloudHarvestCorePluginManager

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  meta.json  pyproject.toml  requirements.txt  setup.py
CloudHarvestCorePluginManager/: __init__.py  decorators.py  functions.py  meta.json  meta.py  plugins.py  pyproject.toml  registry.py
tests/: test_decorators.py  test_functions.py  test_registry.py
tests/dummy/: __init__.py  test.py
