[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = ["Cloud Harvest, Fiona June Leathers"]
classifiers = [ "Programming Language :: Python :: 3.13" ]
description = "This module is responsible for managing plugins and their configurations. It is designed to work with both the Cloud Harvest API and the Cloud Harvest CLI to load components from plugins such as the Cloud Harvest AWS Plugin."
homepage = "https://github.com/Cloud-Harvest/CloudHarvestCorePluginManager"
license = "CC Attribution-NonCommercial-ShareAlike 4.0 International"
name = "CloudHarvestCorePluginManager"
version = "0.5.1"
