[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
CloudHarvestCorePluginManager = [
    "templates/**/*.yaml",
    "pyproject.toml",
]

[project]
authors = [ { name = "Cloud Harvest" } ]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Site Reliability Engineers",
]
description = "This module is responsible for managing plugins and their configurations. It is designed to work with both the Cloud Harvest API and the Cloud Harvest CLI to load components from plugins such as the Cloud Harvest AWS Plugin."
name = "CloudHarvestCorePluginManager"
readme = "README.md"
version = "0.5.1"

[project.license]
license = "CC-BY-NC-SA-4.0"
file = "LICENSE"

[project.urls]
homepage = "https://github.com/Cloud-Harvest/CloudHarvestCorePluginManager"
